# CS744-PA1-PA2-Shell-Threads-Synchronization

./: .gitignore  README.md  q1.c
pa1_shell/: CMakeLists.txt  Makefile  README  README.md  shell_fm.c  test4.py  z_myShellCommands.txt  z_shell_test.c
pa2_threads and synchronization/: README.md  nlocks.c  threads.c
pa2_threads and synchronization/1_hello pthreads/: Makefile  README.md  nlocks.c  threads.c
pa2_threads and synchronization/2_barrier/: Makefile  README.md  barrier-testcase1.c  barrier-testcase2.c  barrier-testcase3.c  barrier-testcase4.c  barrier-testcase5.c  barrier.c  barrier.h
pa2_threads and synchronization/3_race/: README.md  hare_tortoise.c  hare_tortoise_runner.c
pa2_threads and synchronization/3_race/Testcases/: test3.txt  test_format.txt
pa3_malloc/PA_3_handout/: mm1.c
